--- a/src/css/bjj.less
+++ b/src/css/bjj.less
@@ -1,5 +1,10 @@
 // Styles BJJ
 
 .bjj {
+	padding-top: 2%;
 	padding-bottom: @spacer-50;
+	background-image: url("../img/bg-bjj.png");
+	background-position: 100% 50%;
+	background-size: 80%;
+	background-repeat: no-repeat;
 }
