--- a/src/css/contact.less
+++ b/src/css/contact.less
@@ -1,7 +1,8 @@
-.contact {
+body.contact {
 	font-size: 1.9em;
-	background-color: @yell-lt;
+	// background-color: @yell-lt;
 	h1 {
+		color: @yell-lt;
 		text-transform: uppercase;
 		span {
 			font-weight: 900;
@@ -9,19 +10,19 @@
 		}
 	}
 	.form {
-		color: @blk;
+		color: @white-lt;
 		padding-top: 4%;
 		padding-bottom: 4%;
 		h2 {
 			font-size: 1.7em;
-			color: @blk;
+			color: @white-lt;
 			text-transform: capitalize;
 			letter-spacing: 1px;
 			font-weight: 900;
 		}
 		a,
 		p {
-			color: @blk;
+			color: @white-lt;
 		}
 		ul {
 			list-style-type: none;
