--- a/src/css/mma.less
+++ b/src/css/mma.less
@@ -1,5 +1,10 @@
 // Styles MMA
 
 .mma {
+	padding-top: 2%;
 	padding-bottom: @spacer-50;
+	background-image: url(../img/bg-mma.png);
+	background-position: top right 0;
+	background-size: 80%;
+	background-repeat: no-repeat;
 }
