--- a/src/css/muaythai.less
+++ b/src/css/muaythai.less
@@ -1,5 +1,10 @@
 // Styles Muay Thai
 
 .muaythai {
+	padding-top: 2%;
 	padding-bottom: @spacer-50;
+	background-image: url(../img/bg-mtk.png);
+	background-position: top right 0;
+	background-size: 80%;
+	background-repeat: no-repeat;
 }
