--- a/src/html/pages/bjj.hbs
+++ b/src/html/pages/bjj.hbs
@@ -5,18 +5,11 @@ pageid: "styles"
 type: "bjj"
 ---
 <h2>Brazilian <br>Jiu Jitsu (BJJ)</h2>
-<p>
-	<strong>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam dapibus bibendum odio sit amet mollis. Donec elementum, purus ut consequat mollis, tortor nisi pellentesque quam, ut congue orci est vel risus. Sed consequat eleifend magna, iaculis malesuada nibh molestie non. Proin orci nisl, dapibus non tempus vitae, varius in nisi. Sed consectetur, magna at lacinia congue, turpis justo auctor massa, sed sodales sapien dui non est. Nulla et auctor magna. Sed lacinia magna quis lectus aliquet, at lacinia dolor dignissim. Etiam nec nibh nec eros fermentum molestie nec ac dolor. Nunc massa tellus, convallis a tortor vel, ullamcorper tristique nibh. Nullam eu est pharetra mauris viverra porta. Nullam elementum orci euismod finibus tempus. Curabitur tincidunt tristique vehicula. Quisque ultrices ante eget augue volutpat pulvinar. Fusce faucibus neque id finibus dapibus. Vestibulum porttitor urna accumsan porttitor finibus. Suspendisse eget mauris mi.</strong>
-</p>
-<p>
-	Interdum et malesuada fames ac ante ipsum primis in faucibus. Mauris eget ultrices nibh. Morbi tempus elit at suscipit gravida. Sed at luctus turpis. Maecenas nibh lectus, ultrices quis ultricies sed, eleifend eget eros. Maecenas eu ex turpis. Curabitur ut nulla dignissim turpis pretium sollicitudin nec efficitur arcu.
-</p>
-<p>
-	Quisque imperdiet erat placerat pretium sodales. Nullam sagittis felis vitae ante venenatis, id bibendum mi porta. Cras efficitur lectus sit amet massa mattis varius. Vivamus porttitor et odio in elementum. Curabitur ac sapien in felis dignissim viverra eget vel turpis. Pellentesque vel suscipit velit, sed maximus tellus. Phasellus in rutrum libero. Ut feugiat efficitur nunc a pellentesque. Praesent iaculis, enim sagittis semper finibus, eros eros gravida nunc, at volutpat lectus quam ut nunc. Praesent a purus scelerisque, consequat nunc eget, interdum nisi. Maecenas pharetra nisl libero, ac rhoncus ex facilisis eget. Sed hendrerit pretium quam, non placerat dolor accumsan id.
-</p>
-<p>
-	Maecenas non quam eu eros ultricies venenatis at quis lorem. Sed laoreet nulla diam, et finibus quam consequat ac. Nam bibendum libero ipsum. Pellentesque consequat lectus finibus vulputate venenatis. In sollicitudin malesuada purus, ut finibus ante commodo ac. Suspendisse id nibh nisl. Pellentesque condimentum turpis eu urna suscipit elementum. Curabitur ullamcorper dolor lectus, sit amet ultrices purus feugiat a. Integer molestie hendrerit neque sed dapibus. Nulla tincidunt, nisl non eleifend aliquam, dolor sem sollicitudin mauris, vitae rutrum dui enim sit amet tortor. Suspendisse nisi lectus, placerat sed est nec, hendrerit ornare nisi. Sed sodales aliquet metus sed tempor. Donec et massa nec eros dictum pulvinar. Suspendisse et porta libero, nec sodales quam.
-</p>
+<p><strong>Brazilian Jiu Jitsu is a combat sport and a self-defence system that focuses on grappling and ground fighting; emphasising position, control and submissions such as chokes, arm locks and leg locks. BJJ is extremely effective to control your opponent without the use of striking. Because of this, many occupations that require self defense eg. Policemen, military and security will train in this art.</strong></p>
+<p>BJJ gained popularity in 1993, when the UFC held its first ever event. The UFC was originally created to see which martial art was truly the best. This attracted some of the best in many martial arts styles including Royce Gracie who specialised in BJJ, weighed 170 pounds and was competing against opponents with huge weight advantages. He quickly went on to win all his matches, making him the first ever UFC champion, and bringing BJJ to the forefront of martial arts.</p>
+<p>Our classes are run by three highly experienced coaches who have all achieved their black belts in BJJ, along with many titles including state, national and pan pacific champion, and also competing on the world stage multiple times. We dedicate our time and energy to our students, support them through competitions and tournaments, and continue to develop their skills.</p> 
+<p>Our members join for varying reasons – confidence, self defense, weight loss, hobbyist or competitor and have achieved amazing results in each of these areas. We love to see our students progress, so come give one of our classes a go and see for yourself how passionate we are about this art. </p>
+<p>Kids classes also available, see here for more info.</p>
 <div id="bjj-car" class="carousel slide" data-ride="carousel" data-interval="5000">
 	<!-- Wrapper for slides -->
 	<div class="carousel-inner" role="listbox">
@@ -45,7 +38,7 @@ type: "bjj"
 	<li><i class="fa fa-check" aria-hidden="true"></i> Full cardiovascular workout - build strength, physical fitness and coordination</li>
 	<li><i class="fa fa-check" aria-hidden="true"></i> Learn ground fighting techniques from experienced and accredited coaches</li>
 	<li><i class="fa fa-check" aria-hidden="true"></i> Build confidence</li>
-	<li><i class="fa fa-check" aria-hidden="true"></i> All coaches are BJJ blackbelts</li>
 	<li><i class="fa fa-check" aria-hidden="true"></i> Effective in self defence</li>
+	<li><i class="fa fa-check" aria-hidden="true"></i> Compete in tournaments</li>
 	<li><i class="fa fa-check" aria-hidden="true"></i> Meet new people and have fun!</li>
 </ul>
