--- a/src/html/pages/facilities.hbs
+++ b/src/html/pages/facilities.hbs
@@ -8,9 +8,10 @@ pageid: "facilities"
         <div class="row">
             <div class="col-md-8">
                 <h2>Our Facilities</h2>
-                <p>
-                Quisque imperdiet erat placerat pretium sodales. Nullam sagittis felis vitae ante venenatis, id bibendum mi porta. Cras efficitur lectus sit amet massa mattis varius. Vivamus porttitor et odio in elementum. Curabitur ac sapien in felis dignissim viverra eget vel turpis. Pellentesque vel suscipit velit, sed maximus tellus. Phasellus in rutrum libero.
-                </p>
+                <p>Our gym is a modern, well maintained facility consisting of an expansive mat space of 180m2.</p>
+                <p>We pride ourselves on keeping our facilities clean and hygienic at all times, including all equipment
+                used by students.</p>
+                <p>To get a feel for what we offer check out our photos below.</p>
                 <div class="row images">
                     <div class="col-md-6">
                         <p>
@@ -60,10 +61,17 @@ pageid: "facilities"
             </div>
             <div class="col-md-3 col-md-offset-1 side">
                 <ul class="basic"> 
-                    <li><i class="fa fa-check" aria-hidden="true"></i> Hot showers</li>
-                    <li><i class="fa fa-check" aria-hidden="true"></i> Close to the station</li>
-                    <li><i class="fa fa-check" aria-hidden="true"></i> Punching bags</li>
-                    <li><i class="fa fa-check" aria-hidden="true"></i> Retail</li>
+                    <li class="clearfix"><i class="fa fa-check" aria-hidden="true"></i> <p>180m2 mat space, including wall mats</p></li>
+                    <li class="clearfix"><i class="fa fa-check" aria-hidden="true"></i> <p>3 x hanging kickboxing bags</p></li>
+                    <li class="clearfix"><i class="fa fa-check" aria-hidden="true"></i> <p>Thai pads, focus mits, skipping ropes and other training equipment</p></li>
+                    <li class="clearfix"><i class="fa fa-check" aria-hidden="true"></i> <p>Gloves and fight gear available for beginners</p></li>
+                    <li class="clearfix"><i class="fa fa-check" aria-hidden="true"></i> <p>Private bathrooms including showers</p></li>
+                    <li class="clearfix"><i class="fa fa-check" aria-hidden="true"></i> <p>Female and Male changing rooms</p></li>
+                    <li class="clearfix"><i class="fa fa-check" aria-hidden="true"></i> <p>Parking on site</p></li>
+                    <li class="clearfix"><i class="fa fa-check" aria-hidden="true"></i> <p>Lounge area for spectators</p></li>
+                    <li class="clearfix"><i class="fa fa-check" aria-hidden="true"></i> <p>Large foyer/waiting area</p></li>
+                    <li class="clearfix"><i class="fa fa-check" aria-hidden="true"></i> <p>Merchandise and fight gear available for purchase on site</p></li>
+                    <li class="clearfix"><i class="fa fa-check" aria-hidden="true"></i> <p>Beverages and snacks available for purchase on site</p></li>
                 </ul>
             </div>
         </div>
