--- a/src/html/pages/faq.hbs
+++ b/src/html/pages/faq.hbs
@@ -9,16 +9,12 @@ pageid: "faq"
             <div class="col-md-8">
                 <h2>FAQ</h2>
                 <p><strong>Do I need to have previous experience to do these classes?</strong>
-                    <br>Our classes cater to all levels of experience. Our fundamentals classes are tailored to complete
-                    beginners, and those with a small amount of experience. Our intermediate classes are for those who
-                    have graded and/or extensive experience in one of our styles.
+                    <br>Our classes cater to all levels of experiOur classes cater to all levels of experience. Our fundamentals classes are tailored to complete beginners, and those with a small amount of experience. Our intermediate classes are for those who have graded and/or extensive experience in one of our styles.
                 </p>
 
                 <p><strong>What do I need to bring?</strong>
-                    <br>Yourself! Wear comfortable training clothes such as shorts or tights, and a t-shirt/singlet. You won’t
-                    need shoes for these classes.
-                    You’ll also want to have plenty of water to keep yourself hydrated, but we always have a fully
-                    stocked fridge where you can purchase one if you forget.
+                    <br>Yourself! Wear comfortable training clothes such as shorts or tights, and a t-shirt/singlet. You won’t need shoes for these classes.
+                    <br>You’ll also want to have plenty of water to keep yourself hydrated, but we always have a fully stocked fridge where you can purchase one if you forget.
                 </p>
 
                 <p><strong>Do you have showers?</strong>
@@ -26,13 +22,11 @@ pageid: "faq"
                 </p>
 
                 <p><strong>Can anyone join MMA?</strong>
-                    <br>Our MMA classes are listed as ‘invitation only’. This is because we require our students to have a
-                    reasonable level of understanding and skill in both BJJ and Muay Thai before they can train in MMA.
+                    <br>Our MMA classes are listed as 'invitation only'. This is because we require our students to have a reasonable level of understanding and skill in both BJJ and Muay Thai before they can train in MMA.
                 </p>
 
                 <p><strong>What should I wear to classes?</strong>
-                    <br>Wear comfortable training clothes such as shorts or tights, and a t-shirt/singlet. You won’t need
-                    shoes for these classes.
+                    <br>Wear comfortable training clothes such as shorts or tights, and a t-shirt/singlet. You won’t need shoes for these classes.
                 </p>
 
                 <p><strong>Do you have parking on site?</strong>
