--- a/src/html/pages/index.hbs
+++ b/src/html/pages/index.hbs
@@ -12,10 +12,10 @@ pageid: "home"
         </div>
         <div class="row">
             <div class="col-md-12 text-center">
-                <h1 class="hidden-sm hidden-xs">Movement <span>Martial Arts</span><br><small>Sydney's Premier Martial Arts Gym</small></h1>
+                <h1 class="hidden-sm hidden-xs">Movement <span>Martial Arts</span>{{!-- <br><small>Sydney's Premier Martial Arts Gym</small> --}}</h1>
                 <div class="buttons">
-                    <a href="#intro-text" role="button" class="btn js-smooth-link text-center">Learn more</a>
-                    <a href="#intro-text" role="button" class="btn js-smooth-link text-center">Free trial</a>
+                    <a href="about.html" role="button" class="btn text-center">Learn more</a>
+                    <a href="freetrial.html" role="button" class="btn text-center">Free trial</a>
                 </div>
             </div>
         </div>
@@ -29,7 +29,7 @@ pageid: "home"
         </div>
     </div>
 </section>
-<section class="intro-styles">
+<section id="intro-styles" class="intro-styles">
     <div class="container">
         <div class="row">
             <div class="col-md-12">
@@ -37,21 +37,25 @@ pageid: "home"
                 <p>We hold classes in four seperate disciplines, and all of our classes are taught by experts in their style. You can read more about the classes we offer by clicking on one of the images below.</p></div>
             </div>
             <div class="row">
-                <div class="col-md-3 type mt">
+                <div class="col-md-3 type">
                     <h3>Muay Thai</h3>
-                    <a href="muaythai.html" class="btn">Learn more</a>
+                    <p class="text-center"><img src="img/home-mtk.png" class="img-responsive"></p>
+                    <p class="btn"><a href="muaythai.html">Learn more</a></p>
                 </div>
-                <div class="col-md-3 type bjj">
+                <div class="col-md-3 type">
                     <h3>BJJ</h3>
-                    <a href="bjj.html" class="btn">Learn more</a>
+                    <p class="text-center"><img src="img/home-bjj.png" class="img-responsive"></p>
+                    <p class="btn"><a href="bjj.html">Learn more</a></p>
                 </div>
-                <div class="col-md-3 type mma">
+                <div class="col-md-3 type">
                     <h3>MMA</h3>
-                    <a href="mma.html" class="btn">Learn more</a>
+                    <p class="text-center"><img src="img/home-mma.png" class="img-responsive"></p>
+                    <p class="btn"><a href="mma.html">Learn more</a></p>
                 </div>
-                <div class="col-md-3 type kids">
+                <div class="col-md-3 type">
                     <h3>Kids</h3>
-                    <a href="kids.html" class="btn">Learn more</a>
+                    <p class="text-center"><img src="img/home-kids.png" class="img-responsive"></p>
+                    <p class="btn"><a href="kids.html">Learn more</a></p>
                 </div>
             </div>
         </div>
@@ -60,7 +64,7 @@ pageid: "home"
 <div class="line"></div>
 <section id="testimonials">
     <div class="container">
-        <div class="col-md-12 hidden-sm hidden-xs text-center">
+        <div class="col-md-12 text-center">
             <h2>Testimonials</h2>
         </div>
 
@@ -87,7 +91,7 @@ pageid: "home"
                 <h2>One week free trial</h2>
                 <p>Come and try us out for one week, totally free of charge!</p>
                 <a href="timetable.html" class="btn btn-white">See timetable</a>
-                <a href="#" class="btn btn-black" data-toggle="modal" data-target="#freetrial">Come on!</a>
+                <a href="freetrial.html" class="btn btn-black">Come on!</a>
             </div>
         </div>
     </div>
