--- a/src/html/pages/mma.hbs
+++ b/src/html/pages/mma.hbs
@@ -5,18 +5,10 @@ pageid: "styles"
 type: "mma"
 ---
 <h2>Mixed Martial Arts <br>(MMA)</h2>
-<p>
-	<strong>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam dapibus bibendum odio sit amet mollis. Donec elementum, purus ut consequat mollis, tortor nisi pellentesque quam, ut congue orci est vel risus. Sed consequat eleifend magna, iaculis malesuada nibh molestie non. Proin orci nisl, dapibus non tempus vitae, varius in nisi. Sed consectetur, magna at lacinia congue, turpis justo auctor massa, sed sodales sapien dui non est. Nulla et auctor magna. Sed lacinia magna quis lectus aliquet, at lacinia dolor dignissim. Etiam nec nibh nec eros fermentum molestie nec ac dolor. Nunc massa tellus, convallis a tortor vel, ullamcorper tristique nibh. Nullam eu est pharetra mauris viverra porta. Nullam elementum orci euismod finibus tempus. Curabitur tincidunt tristique vehicula. Quisque ultrices ante eget augue volutpat pulvinar. Fusce faucibus neque id finibus dapibus. Vestibulum porttitor urna accumsan porttitor finibus. Suspendisse eget mauris mi.</strong>
-</p>
-<p>
-	Interdum et malesuada fames ac ante ipsum primis in faucibus. Mauris eget ultrices nibh. Morbi tempus elit at suscipit gravida. Sed at luctus turpis. Maecenas nibh lectus, ultrices quis ultricies sed, eleifend eget eros. Maecenas eu ex turpis. Curabitur ut nulla dignissim turpis pretium sollicitudin nec efficitur arcu.
-</p>
-<p>
-	Quisque imperdiet erat placerat pretium sodales. Nullam sagittis felis vitae ante venenatis, id bibendum mi porta. Cras efficitur lectus sit amet massa mattis varius. Vivamus porttitor et odio in elementum. Curabitur ac sapien in felis dignissim viverra eget vel turpis. Pellentesque vel suscipit velit, sed maximus tellus. Phasellus in rutrum libero. Ut feugiat efficitur nunc a pellentesque. Praesent iaculis, enim sagittis semper finibus, eros eros gravida nunc, at volutpat lectus quam ut nunc. Praesent a purus scelerisque, consequat nunc eget, interdum nisi. Maecenas pharetra nisl libero, ac rhoncus ex facilisis eget. Sed hendrerit pretium quam, non placerat dolor accumsan id.
-</p>
-<p>
-	Maecenas non quam eu eros ultricies venenatis at quis lorem. Sed laoreet nulla diam, et finibus quam consequat ac. Nam bibendum libero ipsum. Pellentesque consequat lectus finibus vulputate venenatis. In sollicitudin malesuada purus, ut finibus ante commodo ac. Suspendisse id nibh nisl. Pellentesque condimentum turpis eu urna suscipit elementum. Curabitur ullamcorper dolor lectus, sit amet ultrices purus feugiat a. Integer molestie hendrerit neque sed dapibus. Nulla tincidunt, nisl non eleifend aliquam, dolor sem sollicitudin mauris, vitae rutrum dui enim sit amet tortor. Suspendisse nisi lectus, placerat sed est nec, hendrerit ornare nisi. Sed sodales aliquet metus sed tempor. Donec et massa nec eros dictum pulvinar. Suspendisse et porta libero, nec sodales quam.
-</p>
+<p><strong>MMA is the world's fastest growing sport. It is an extremely comprehensive fighting style which requires fighters to have an extensive knowledge of all aspects of fighting including stand up, take downs and ground fighting. The most common martial arts incorporated into MMA are Brazilian Jiu Jitsu, Kickboxing/boxing and Wrestling.</strong></p>
+<p>As a complex sport an MMA match can end in many different ways and requires both physical skill and strategic thinking to dominate. This is what makes the sport so exciting and popular.</p>
+<p>These classes are full contact and move at pace, therefore we offer these classes only to our intermediate students or students who have trained sufficiently in martial arts. This ensures that our students have the capabilities and foundation to incorporate multiple styles into their game plan, and most importantly creates a safe environment and skill level for their training partners. Because of this, it enables us to give a lot of focus and time to honing their game strategy, technique and ability. </p>
+<p>Our coaches focus on the physical aspect, but also work to develop the mental and strategic aspect of the sport. Building you into a complete martial artist.</p>
 <div id="mma-car" class="carousel slide" data-ride="carousel" data-interval="5000">
 	<!-- Wrapper for slides -->
 	<div class="carousel-inner" role="listbox">
@@ -42,10 +34,9 @@ type: "mma"
 </div>
 <h4>About the class</strong></h4>
 <ul class="basic"> 
-	<li><i class="fa fa-check" aria-hidden="true"></i> Full cardiovascular workout - build strength, physical fitness and coordination</li>
-	<li><i class="fa fa-check" aria-hidden="true"></i> Learn ground fighting techniques from experienced and accredited coaches</li>
-	<li><i class="fa fa-check" aria-hidden="true"></i> Build confidence</li>
-	<li><i class="fa fa-check" aria-hidden="true"></i> All coaches are BJJ blackbelts</li>
-	<li><i class="fa fa-check" aria-hidden="true"></i> Effective in self defence</li>
-	<li><i class="fa fa-check" aria-hidden="true"></i> Meet new people and have fun!</li>
+	<li><i class="fa fa-check" aria-hidden="true"></i> Learn how to incorporate multiple fighting styles</li>
+	<li><i class="fa fa-check" aria-hidden="true"></i> Develop physical techniques in a safe environment</li>
+	<li><i class="fa fa-check" aria-hidden="true"></i> Develop strategy</li>
+	<li><i class="fa fa-check" aria-hidden="true"></i> Intense physical workout</li>
+	<li><i class="fa fa-check" aria-hidden="true"></i> Compete professionally</li>
 </ul>
