--- a/src/html/pages/muaythai.hbs
+++ b/src/html/pages/muaythai.hbs
@@ -5,18 +5,11 @@ pageid: "styles"
 type: "muaythai"
 ---
 <h2>Muay Thai</h2>
-<p>
-	<strong>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam dapibus bibendum odio sit amet mollis. Donec elementum, purus ut consequat mollis, tortor nisi pellentesque quam, ut congue orci est vel risus. Sed consequat eleifend magna, iaculis malesuada nibh molestie non. Proin orci nisl, dapibus non tempus vitae, varius in nisi. Sed consectetur, magna at lacinia congue, turpis justo auctor massa, sed sodales sapien dui non est. Nulla et auctor magna. Sed lacinia magna quis lectus aliquet, at lacinia dolor dignissim. Etiam nec nibh nec eros fermentum molestie nec ac dolor. Nunc massa tellus, convallis a tortor vel, ullamcorper tristique nibh. Nullam eu est pharetra mauris viverra porta. Nullam elementum orci euismod finibus tempus. Curabitur tincidunt tristique vehicula. Quisque ultrices ante eget augue volutpat pulvinar. Fusce faucibus neque id finibus dapibus. Vestibulum porttitor urna accumsan porttitor finibus. Suspendisse eget mauris mi.</strong>
-</p>
-<p>
-	Interdum et malesuada fames ac ante ipsum primis in faucibus. Mauris eget ultrices nibh. Morbi tempus elit at suscipit gravida. Sed at luctus turpis. Maecenas nibh lectus, ultrices quis ultricies sed, eleifend eget eros. Maecenas eu ex turpis. Curabitur ut nulla dignissim turpis pretium sollicitudin nec efficitur arcu.
-</p>
-<p>
-	Quisque imperdiet erat placerat pretium sodales. Nullam sagittis felis vitae ante venenatis, id bibendum mi porta. Cras efficitur lectus sit amet massa mattis varius. Vivamus porttitor et odio in elementum. Curabitur ac sapien in felis dignissim viverra eget vel turpis. Pellentesque vel suscipit velit, sed maximus tellus. Phasellus in rutrum libero. Ut feugiat efficitur nunc a pellentesque. Praesent iaculis, enim sagittis semper finibus, eros eros gravida nunc, at volutpat lectus quam ut nunc. Praesent a purus scelerisque, consequat nunc eget, interdum nisi. Maecenas pharetra nisl libero, ac rhoncus ex facilisis eget. Sed hendrerit pretium quam, non placerat dolor accumsan id.
-</p>
-<p>
-	Maecenas non quam eu eros ultricies venenatis at quis lorem. Sed laoreet nulla diam, et finibus quam consequat ac. Nam bibendum libero ipsum. Pellentesque consequat lectus finibus vulputate venenatis. In sollicitudin malesuada purus, ut finibus ante commodo ac. Suspendisse id nibh nisl. Pellentesque condimentum turpis eu urna suscipit elementum. Curabitur ullamcorper dolor lectus, sit amet ultrices purus feugiat a. Integer molestie hendrerit neque sed dapibus. Nulla tincidunt, nisl non eleifend aliquam, dolor sem sollicitudin mauris, vitae rutrum dui enim sit amet tortor. Suspendisse nisi lectus, placerat sed est nec, hendrerit ornare nisi. Sed sodales aliquet metus sed tempor. Donec et massa nec eros dictum pulvinar. Suspendisse et porta libero, nec sodales quam.
-</p>
+<p><strong>Muay Thai is a style of kickboxing that originates from Thailand and uses the whole body. It is referred to as the art of 8 limbs, incorporating hands, elbows, feet, knees and grappling into a comprehensive and effective striking based martial art. It is a great cardiovascular workout, effective for self-defence and is a dominant striking style to train for competitive kickboxing and MMA.</strong></p> 
+<p>Our Muay Thai kickboxing classes teach effective fighting techniques and also provides students with a challenging workout. We cater to new beginners at all fitness levels, right through to advanced students competing professionally. Our Muay Thai program allows us to teach students techniques when they are ready to integrate more into their repertoire, and empowers our students to progress at a pace that suits them.
+Once students reach intermediate classes we teach full contact sparring, which is carefully monitored to ensure our students safety and skill development.</p>
+<p>Our Muay Thai head instructors are super experienced, with extensive knowledge and passion to pass on their expertise to the students.</p>
+<p>Whether you’re looking to improve your fitness, your confidence, meet new people, learn a new skill or fight professionally our classes are for you!</p>
 <div id="bjj-car" class="carousel slide" data-ride="carousel" data-interval="5000">
 	<!-- Wrapper for slides -->
 	<div class="carousel-inner" role="listbox">
@@ -42,10 +35,10 @@ type: "muaythai"
 </div>
 <h4>About the class</strong></h4>
 <ul class="basic"> 
-	<li><i class="fa fa-check" aria-hidden="true"></i> Full cardiovascular workout - build strength, physical fitness and coordination</li>
-	<li><i class="fa fa-check" aria-hidden="true"></i> Learn ground fighting techniques from experienced and accredited coaches</li>
+	<li><i class="fa fa-check" aria-hidden="true"></i> Full cardiovascular workout – build strength, physical fitness and coordination</li>
+	<li><i class="fa fa-check" aria-hidden="true"></i> Learn stand up fighting techniques from experienced and accredited coaches</li>
 	<li><i class="fa fa-check" aria-hidden="true"></i> Build confidence</li>
-	<li><i class="fa fa-check" aria-hidden="true"></i> All coaches are BJJ blackbelts</li>
 	<li><i class="fa fa-check" aria-hidden="true"></i> Effective in self defence</li>
-	<li><i class="fa fa-check" aria-hidden="true"></i> Meet new people and have fun!</li>
+	<li><i class="fa fa-check" aria-hidden="true"></i> Progress to compete professionally</li>
+	<li><i class="fa fa-check" aria-hidden="true"></i> Meet new people &amp; have fun!</li>
 </ul>
