--- a/src/css/facilities.less
+++ b/src/css/facilities.less
@@ -10,6 +10,16 @@ body.facilities {
 			font-size: 1.5em;
 			color: @yell-lt;
 			padding-right: @spacer-10;
+			display: block;
+			float: left;
+			width: 15%;
+		}
+		p {
+			display: block;
+			float: right;
+			width: 85%;
+			padding: 0;
+			margin: 0;
 		}
 		li {
 			color: @white-lt;
@@ -30,6 +40,26 @@ body.facilities {
 		padding-top: 1em;
 		padding-bottom: 1em;
 		border: none;
+	}
+	@media (max-width: @screen-xs) {
+		ul.basic {
+			i {
+				width: 6%;
+			}
+			p {
+				width: 87%;
+			}
+		}
+	}
+	@media (min-width: @screen-xs) and (max-width: @screen-sm) {
+		ul.basic {
+			i {
+				width: 5%;
+			}
+			p {
+				width: 93%;
+			}
+		}
 	}
 	@media (min-width: @screen-sm) {
 		padding-top: 10em;
