--- a/src/css/footer.less
+++ b/src/css/footer.less
@@ -1,8 +1,9 @@
 /* footer */
 
 footer {
-  padding-top: 5%;
-  font-size: .9em;
+  padding-top: 4%;
+  padding-bottom: 3%;
+  font-size: 0.9em;
   background: @blk;
   h3 {
     font-size: 1.1em;
@@ -27,6 +28,6 @@ footer {
   }
 
   .social {
-    font-size: 4em;
+    font-size: 2.5em;
   }
 }
