--- a/src/css/introstyles.less
+++ b/src/css/introstyles.less
@@ -15,37 +15,29 @@
 		text-shadow: @white-lt 0 0 20px;
 		padding-top: @spacer-30;
 		padding-left: @spacer-30;
-	}
-	.type {
-		min-height: 300px;
-	}
-	.mt {
-		background-image: url("http://lorempixel.com/262/300/");
-		background-repeat: no-repeat;
-		background-position: center;
-	}
-	.bjj {
-		background-image: url("http://lorempixel.com/262/300/");
-		background-repeat: no-repeat;
-		background-position: center;
-	}
-	.mma {
-		background-image: url("http://lorempixel.com/262/300/");
-		background-repeat: no-repeat;
-		background-position: center;
-	}
-	.kids {
-		background-image: url("http://lorempixel.com/262/300/");
-		background-repeat: no-repeat;
-		background-position: center;
+		position: absolute;
 	}
 	.btn {
 		position: absolute;
-		width: 262px;
-		left: 15px;
+		width: 100%;
+		left: 0;
 		bottom: 0;
 		text-align: right;
 		color: @white-lt;
-		background:rgba(0,0,0,0.75);
+		background: rgba(0, 0, 0, 0.75);
+		padding-top: 0;
+		padding-bottom: 0;
+		padding-right: 14px;
+		a {
+			background-image: url("../img/btn-yellow-right.png");
+			background-repeat: no-repeat;
+			background-position: center right;
+			padding-right: 51px;
+			padding-top: 9px;
+			color: #fff;
+			font-weight: 900;
+			min-height: 41px;
+			display: block;
+		}
 	}
 }
