--- a/src/html/pages/kids.hbs
+++ b/src/html/pages/kids.hbs
@@ -5,18 +5,21 @@ pageid: "styles"
 type: "kids"
 ---
 <h2>Kids BJJ <br>Classes</h2>
-<p>
-	<strong>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam dapibus bibendum odio sit amet mollis. Donec elementum, purus ut consequat mollis, tortor nisi pellentesque quam, ut congue orci est vel risus. Sed consequat eleifend magna, iaculis malesuada nibh molestie non. Proin orci nisl, dapibus non tempus vitae, varius in nisi. Sed consectetur, magna at lacinia congue, turpis justo auctor massa, sed sodales sapien dui non est. Nulla et auctor magna. Sed lacinia magna quis lectus aliquet, at lacinia dolor dignissim. Etiam nec nibh nec eros fermentum molestie nec ac dolor. Nunc massa tellus, convallis a tortor vel, ullamcorper tristique nibh. Nullam eu est pharetra mauris viverra porta. Nullam elementum orci euismod finibus tempus. Curabitur tincidunt tristique vehicula. Quisque ultrices ante eget augue volutpat pulvinar. Fusce faucibus neque id finibus dapibus. Vestibulum porttitor urna accumsan porttitor finibus. Suspendisse eget mauris mi.</strong>
-</p>
-<p>
-	Interdum et malesuada fames ac ante ipsum primis in faucibus. Mauris eget ultrices nibh. Morbi tempus elit at suscipit gravida. Sed at luctus turpis. Maecenas nibh lectus, ultrices quis ultricies sed, eleifend eget eros. Maecenas eu ex turpis. Curabitur ut nulla dignissim turpis pretium sollicitudin nec efficitur arcu.
-</p>
-<p>
-	Quisque imperdiet erat placerat pretium sodales. Nullam sagittis felis vitae ante venenatis, id bibendum mi porta. Cras efficitur lectus sit amet massa mattis varius. Vivamus porttitor et odio in elementum. Curabitur ac sapien in felis dignissim viverra eget vel turpis. Pellentesque vel suscipit velit, sed maximus tellus. Phasellus in rutrum libero. Ut feugiat efficitur nunc a pellentesque. Praesent iaculis, enim sagittis semper finibus, eros eros gravida nunc, at volutpat lectus quam ut nunc. Praesent a purus scelerisque, consequat nunc eget, interdum nisi. Maecenas pharetra nisl libero, ac rhoncus ex facilisis eget. Sed hendrerit pretium quam, non placerat dolor accumsan id.
-</p>
-<p>
-	Maecenas non quam eu eros ultricies venenatis at quis lorem. Sed laoreet nulla diam, et finibus quam consequat ac. Nam bibendum libero ipsum. Pellentesque consequat lectus finibus vulputate venenatis. In sollicitudin malesuada purus, ut finibus ante commodo ac. Suspendisse id nibh nisl. Pellentesque condimentum turpis eu urna suscipit elementum. Curabitur ullamcorper dolor lectus, sit amet ultrices purus feugiat a. Integer molestie hendrerit neque sed dapibus. Nulla tincidunt, nisl non eleifend aliquam, dolor sem sollicitudin mauris, vitae rutrum dui enim sit amet tortor. Suspendisse nisi lectus, placerat sed est nec, hendrerit ornare nisi. Sed sodales aliquet metus sed tempor. Donec et massa nec eros dictum pulvinar. Suspendisse et porta libero, nec sodales quam.
-</p>
+<p><strong>Our Brazilian Jiu Jitsu program caters for kids 5 to 14 years old.</strong></p>
+<p>Brazilian Jiu Jitsu (BJJ) is a grappling art used to take your opponent to the ground, controlling them
+with position and finishing with a submission. BJJ was designed for a smaller person using technique
+and leverage to defeat a much larger opponent.</p>
+<p>Our classes are specifically tailored and designed for a child’s developing mind and body, with
+activities which teach real-life technique in a fun and engaging way.</p>
+<p>Through our syllabus your child will develop discipline, respect, grit and self-confidence in a fun,
+clean, and most importantly safe environment. They will also develop physical skills and technique
+that can help your child defend themselves in a difficult situation.</p>
+<p>Many of our students choose to compete in the sporting aspect of BJJ, gaining titles such as State
+Champion, National Champion &amp; even World Champion. We also have many students who opt not
+to compete, and we spend an equal amount of time and energy developing both.</p>
+<p>All our instructors are accredited and highly experienced coaches with complete and regular working
+with children checks.</p>
+<p>Our students love our classes, come check them out for yourselves!</p>
 <div id="kids-car" class="carousel slide" data-ride="carousel" data-interval="5000">
 	<!-- Wrapper for slides -->
 	<div class="carousel-inner" role="listbox">
@@ -42,10 +45,9 @@ type: "kids"
 </div>
 <h4>About the class</strong></h4>
 <ul class="basic"> 
-	<li><i class="fa fa-check" aria-hidden="true"></i> Full cardiovascular workout - build strength, physical fitness and coordination</li>
-	<li><i class="fa fa-check" aria-hidden="true"></i> Learn ground fighting techniques from experienced and accredited coaches</li>
-	<li><i class="fa fa-check" aria-hidden="true"></i> Build confidence</li>
-	<li><i class="fa fa-check" aria-hidden="true"></i> All coaches are BJJ blackbelts</li>
-	<li><i class="fa fa-check" aria-hidden="true"></i> Effective in self defence</li>
-	<li><i class="fa fa-check" aria-hidden="true"></i> Meet new people and have fun!</li>
+	<li><i class="fa fa-check" aria-hidden="true"></i> Be bully proof!</li>
+	<li><i class="fa fa-check" aria-hidden="true"></i> Learn from accredited coaches with complete working with children checks</li>
+	<li><i class="fa fa-check" aria-hidden="true"></i> Develop discipline, confidence, self esteem and respect</li>
+	<li><i class="fa fa-check" aria-hidden="true"></i> Build strength, physical fitness, coordination &amp; mental toughness</li>
+	<li><i class="fa fa-check" aria-hidden="true"></i> Make friends &amp; have fun!</li>
 </ul>
