--- a/src/html/partials/footer.hbs
+++ b/src/html/partials/footer.hbs
@@ -9,10 +9,10 @@
                 <p><a href="" data-toggle="modal" data-target="#sizzle">Get directions</a></p>
                 <p id="phonenumber">(02) 9887 1230</p>
             </div>
-            <div class="col-md-3">
+{{!--             <div class="col-md-3">
                 <h3>Site Links</h3>
                 {{> nav_footer navitems_footer}}
-            </div>
+            </div> --}}
             <div class="col-md-3">
                 <h3>Follow Us</h3>
                 <p class="social">
