--- a/src/html/partials/global-nav.hbs
+++ b/src/html/partials/global-nav.hbs
@@ -6,7 +6,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <a href="/" class="navbar-left hidden-sm visible-md-block visible-lg-block"><img src="img/logo-nav.png"></a>
+        <a href="/" class="navbar-left hidden-sm visible-md-block visible-lg-block logo"><img src="img/logo-nav.png"></a>
         <ul class="nav navbar-nav navbar-right navbar-social">
             <!-- TO-DO popovers for icons? -->
             <li class="visible-xs-block"><a href="tel:(02) 9887 1230"><i class="glyphicon glyphicon-phone-alt"></i>
