--- a/src/css/movement.less
+++ b/src/css/movement.less
@@ -13,6 +13,7 @@
 @import "cta.less";
 @import "maps.less";
 @import "location.less";
+@import "modals.less";
 /* Pages */
 @import "aboutus.less";
 @import "styles.less";
