--- a/src/html/partials/modals.hbs
+++ b/src/html/partials/modals.hbs
@@ -4,7 +4,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
-                <h4 class="modal-title" id="myModalLabel">How to find Movement</h4>
+                <h2 class="modal-title" id="myModalLabel">Directions</h2>
             </div>
             <div class="modal-body">
                 <div class="embed-responsive embed-responsive-16by9">
@@ -12,69 +12,6 @@
                         <iframe class="embed-responsive-item" src="//www.youtube.com/embed/PUNZUh35A8s"></iframe>
                     </div>
                 </div>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- Free trial form modal -->
-<div class="modal fade" id="freetrial" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="display: none;">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
-                <h4 class="modal-title" id="myModalLabel">Claim your free trial today!</h4>
-            </div>
-            <div class="modal-body">
-                <form name="sentMessage" class="contact-form" id="contactForm" method="post" novalidate>
-                    <div class="row">
-                        <div class="col-md-12">
-                            <div class="row control-group">
-                                <div class="form-group col-xs-12 controls">
-                                    <input type="text" class="form-control" placeholder="Name" id="name" required data-validation-required-message="Please enter your name.">
-                                    <p class="help-block"></p>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- <div class="col-md-12">
-                            <div class="row control-group">
-                                <div class="form-group col-xs-12 controls">
-                                    <input type="email" class="form-control" placeholder="Email Address" id="email">
-                                    <p class="help-block"></p>
-                                </div>
-                            </div>
-                        </div> -->
-                    </div>
-                    <div class="row control-group">
-                        <div class="form-group col-xs-12  controls">
-                            <input type="tel" class="form-control" placeholder="Phone Number" id="phone" required data-validation-required-message="Please enter your phone number.">
-                            <p class="help-block"></p>
-                        </div>
-                    </div>
-                    <!--  <div class="row control-group">
-                       <div class="form-group col-xs-12  controls">
-                           <select class="form-control placeholder" id="enquiry" required data-validation-required-message="Please choose an enquiry type.">
-                               <option selected disabled>Please select enquiry</option>
-                               <option value="General Enquiry">General enquiry</option>
-                               <option value="Free Trial">Free 1 week trial</option>
-                               <option value="Feedback">Feedback</option>
-                           </select>
-                           <p class="help-block"></p>
-                       </div>
-                   </div> -->
-                    <!-- <div class="row control-group">
-                        <div class="form-group col-xs-12 controls">
-                            <textarea rows="5" class="form-control" placeholder="Message" id="message"></textarea>
-                            <p class="help-block"></p>
-                        </div>
-                    </div> -->
-                    <br>
-                    <div id="success"></div>
-                    <div class="row">
-                        <div class="form-group col-xs-12 text-right">
-                            <button type="submit" class="btn btn-white btn-lg">Claim!</button>
-                        </div>
-                    </div>
-                </form>
             </div>
         </div>
     </div>
